# laccaria

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
cli/: Cargo.toml
cli/src/: bus.rs  main.rs
cli/src/commands/: delete.rs  kill.rs  list.rs  mod.rs  restart.rs  start.rs
daemon/: Cargo.toml
daemon/src/: active_process.rs  db.rs  main.rs  process.rs  state.rs
