[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "laccaria"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
shlex = "1.1"
zbus = "3.14"
clap = { version = "4.3", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4"
anyhow = "1"
comfy-table = "7.0.1"
