[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "laccaria"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
zbus = "3.14"
clap = { version = "4.3", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4"
anyhow = "1"
comfy-table = "7.0.1"
