[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "laccaria-daemon"
path = "src/main.rs"

[dependencies]
zbus = "3.14"
log = "0.4"
anyhow = "1.0.75"
daemonize = "0.5.0"
pretty_env_logger = "0.5.0"
async-std = { version = "1.12.0", features = ["unstable"] }
sysinfo = "0.29.10"
shlex = "1.2.0"
serde = { version = "1.0.189", features = ["derive"] }
bitcode = "0.5.0"
sled = "0.34.7"

[features]
clean = []
